copy wrap style with fixed position

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@500&display=swap');
+
 *{
     padding: 0%;
     margin: 0%;
@@ -5,10 +7,17 @@
 
 body{
     background-color: #ffffff;
+    overflow-x: hidden;
+    font-family: 'Nunito Sans', sans-serif;
+
 }
 
 header{
     border-bottom: 1px solid rgb(238, 238, 238);
+    position: sticky;
+    top: 0;
+    background-color: #ffffff;
+    z-index: 9999;
     height: 85px;
     display: flex;
     justify-content: space-between;
@@ -58,13 +67,67 @@ header{
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
         .palette{
-            height: 200px;
+            height: 500px;
             border-radius: 2px;
             transition: 400ms;
             &:hover{
                 transform: scale(1.04);
                 cursor:pointer;
             }
+        }
+    }
+}
+
+.copy_wrap{
+    border-top: 1px solid rgb(238, 238, 238);
+    position: fixed;
+    background-color: #ffffff;
+    bottom: 0px;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    .hexcode{
+        margin-left: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        .color{
+            height: 20px;
+            width: 20px;
+            border-radius: 2px;
+            border: 3px solid gray;
+        }  
+        .arrow{
+            color: gray;
+        }   
+    }
+    .toggle_down{
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 0);
+        color: gray;
+        transition: 200ms;
+        &:hover{
+            color: #000000;
+            cursor: pointer;
+        }
+    }
+    .copy_btn{
+        margin-right: 10px;
+        border: 1px solid rgb(71, 221, 58);
+        outline:none;
+        background-color: rgb(49, 231, 32);
+        padding: 10px 15px;
+        font-size: 12px;
+        border-radius: 50px;
+        color: #ffffff;
+        transition: 200ms;
+        &:hover{
+            cursor: pointer;
+            background-color: black;
+            border: 1px solid gray;
         }
     }
 }
